--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -22,8 +22,9 @@
 				<div class="well sidebar-nav">
 				<ul class="nav nav-list">
 					<li{% if page.url == '/index.html'%} class="active"{% endif %}><a href="/index.html">Home</a></li>
-					<li{% if page.url == '/support/specification.html'%} class="active"{% endif %}><a href="/support/specification.html">Specifications</a></li>
 					<li{% if page.url == '/support/contact.html'%} class="active"{% endif %}><a href="/support/contact.html">Contact</a></li>
+					<li{% if page.url == '/support/links.html'%} class="active"{% endif %}><a href="/support/links.html">Links</a></li>
+					<li{% if page.url == '/support/specification.html'%} class="active"{% endif %}><a href="/support/specification.html">Specifications</a></li>
 					<li{% if page.url == '/all.html'%} class="active"{% endif %}><a href="/all.html">All Logos</a></li>
 					<!--<li class="nav-header">Categories</li>
 					<li><a href="#">Link</a></li>
