added github corner banner

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -39,6 +39,7 @@
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script src="/js/bootstrap.js"></script>
 {% include google-analytics.html %}
+{% include github.html %}
 </body>
 </html>
 
