--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -13,6 +13,7 @@
 	}
 	</style>
 	<link rel="shortcut icon" href="/favicon.ico">
+{% include google-analytics.html %}
 </head>
 
 <body>
@@ -44,7 +45,7 @@
 	</div><!--/.fluid-container-->
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script src="/js/bootstrap.js"></script>
-{% include google-analytics.html %}
+{% include github.html %}
 </body>
 </html>
 
