--- a/_layouts/logo.html
+++ b/_layouts/logo.html
@@ -3,14 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>{{ page.title }}</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="/css/bootstrap.css" rel="stylesheet">
-	<style type="text/css">
-	.breadcrumb {
-		margin-top:10px;
-	}
-	</style>
-	<link rel="shortcut icon" href="/favicon.ico">
+{% include meta.html %}
 </head>
 <body>
 	<div class="container-fluid">
