added tools link to navbar

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -17,6 +17,7 @@
 					<li{% if page.url == '/support/contact.html'%} class="active"{% endif %}><a href="/support/contact.html">Contact</a></li>
 					<li{% if page.url == '/support/links.html'%} class="active"{% endif %}><a href="/support/links.html">Links</a></li>
 					<li{% if page.url == '/support/specification.html'%} class="active"{% endif %}><a href="/support/specification.html">Specifications</a></li>
+					<li{% if page.url == '/support/tools.html'%} class="active"{% endif %}><a href="/support/tools.html">Tools</a></li>
 					<li{% if page.url == '/all.html'%} class="active"{% endif %}><a href="/all.html">All Logos</a></li>
 					<!--<li class="nav-header">Categories</li>
 					<li><a href="#">Link</a></li>
