--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,6 +1,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="http://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css" />
-	<link href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css" />
+	<link href="http://fonts.googleapis.com/css?family=Arvo:400,400italic,700,700italic" rel="stylesheet" type="text/css" />
+	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic" rel="stylesheet" type="text/css" />
 	<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />
 	<style type="text/css">
 	.breadcrumb {
@@ -9,6 +9,14 @@
 	.sidebar-nav {
 		padding: 9px 0;
 		margin-top:20px;
+	}
+	h1, h2, h3, h4, h5, h6 {
+		font-family: Arvo,Georgia,Times,serif;
+	}
+	.logo-container img {
+		box-shadow: 0 0 20px #1d1d1d;
+		border: solid #ccc 1px;
+		margin: 30px;
 	}
 	</style>
 	<link rel="shortcut icon" href="/favicon.ico">
