--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -27,7 +27,9 @@
 			</div><!--/span-->
 			<div class="span9">
 			<h1>{{ page.title }}</h1>
-			{{ content }}
+				<div class="logo-container">
+				{{ content }}
+				</div>
 			</div><!--/span-->
 		</div><!--/row-->
 		<hr>
