--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,6 +1,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="http://fonts.googleapis.com/css?family=Arvo:400,400italic,700,700italic" rel="stylesheet" type="text/css" />
-	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic" rel="stylesheet" type="text/css" />
+	<link href="http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic" rel="stylesheet" type="text/css" />
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic" rel="stylesheet" type="text/css" />
 	<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />
 	<style type="text/css">
 	.breadcrumb {
@@ -11,7 +11,7 @@
 		margin-top:20px;
 	}
 	h1, h2, h3, h4, h5, h6 {
-		font-family: Arvo,Georgia,Times,serif;
+		font-family: Lora,Georgia,Times,serif;
 	}
 	.logo-container img {
 		box-shadow: 0 0 20px #1d1d1d;
