--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -205,7 +205,7 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -1187,7 +1187,7 @@ input,
 button,
 select,
 textarea {
-  font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
 label {
   display: block;
@@ -3032,7 +3032,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-search .search-query {
   margin-bottom: 0;
   padding: 4px 14px;
-  font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
