--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -1,22 +1,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic" rel="stylesheet" type="text/css" />
-	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic" rel="stylesheet" type="text/css" />
 	<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />
+	<link href="/css/font-awesome.css" rel="stylesheet" type="text/css" />
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,300,400italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<style type="text/css">
-	.breadcrumb {
-		margin-top:10px;
-	}
-	.sidebar-nav {
-		padding: 9px 0;
-		margin-top:20px;
-	}
-	h1, h2, h3, h4, h5, h6 {
-		font-family: Lora,Georgia,Times,serif;
-	}
-	.logo-container img {
-		box-shadow: 0 0 20px #1d1d1d;
-		border: solid #ccc 1px;
-		margin: 30px;
-	}
 	</style>
 	<link rel="shortcut icon" href="/favicon.ico">
+	<script>if (window.top.location != window.location) { window.top.location.href = document.location.href; }</script>
+	<script src="/js/jquery-2.1.4.js"></script>
+	<script src="/js/bootstrap.js"></script>
+
