all logos page working with new UI

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -4,6 +4,11 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<style type="text/css">
+	.logo-container img {
+		box-shadow: 0 0 20px #1d1d1d;
+		border: solid #ccc 1px;
+		margin: 30px;
+	}
 	</style>
 	<link rel="shortcut icon" href="/favicon.ico">
 	<script>if (window.top.location != window.location) { window.top.location.href = document.location.href; }</script>
