--- a/www/_includes/navbar.html
+++ b/www/_includes/navbar.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="navbar-collapse collapse navbar-right">
 			<ul class="nav navbar-nav">
-				<li><a href="/all.html">Logos</a></li>
+				<li><a href="/logos/index.html">Logos</a></li>
 				<li><a href="/support/index.html">Support</a></li>
 				<li><a href="/support/contact.html">Contact</a></li>
 			</ul>
