re-added 'fork me on github' graphic

--- a/www/_includes/github.html
+++ b/www/_includes/github.html
@@ -1,1 +1,6 @@
-<a href="https://github.com/fileformat/hackerlogos"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
+    <div class="github-fork-ribbon-wrapper right-bottom">
+        <div class="github-fork-ribbon">
+            <a href="https://github.com/fileformat/hackerlogos">Fork me on GitHub</a>
+        </div>
+    </div>
