--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -19,5 +19,6 @@
 		{% include footer.html %}
 	</div><!--/container-->
 {% include google-analytics.html %}
+{% include github.html %}
 </body>
 </html>
