--- a/www/_includes/navbar.html
+++ b/www/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default hidden-print">
+<nav class="navbar navbar-default navbar-static-top hidden-print">
 	<div class="container">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
