--- a/www/_includes/navbar.html
+++ b/www/_includes/navbar.html
@@ -11,6 +11,7 @@
 		<div class="navbar-collapse collapse navbar-right">
 			<ul class="nav navbar-nav">
 				<li><a href="/logos/index.html">Logos</a></li>
+				<li><a href="/support/contribute.html">Contribute</a></li>
 				<li><a href="/support/index.html">Support</a></li>
 				<li><a href="/support/contact.html">Contact</a></li>
 			</ul>
