inventory page, automatic list on logos pages

--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>{{ site.title }} - {{ page.title }}</title>
+	<title>{{ site.title }} - {{ page.title }}{% if page.images.size > 0 %} Logos{% endif %}</title>
 	{% if page.url == '/index.html'%}{% include meta-home.html %}{% endif %}
 {% include meta.html %}
 </head>
@@ -15,6 +15,7 @@
 				{{ content }}
 			</div><!--/col-->
 		</div><!--/row-->
+		{% if page.images.size > 0 %}{% include imagelist.html %}{% endif %}
 		<hr>
 		{% include footer.html %}
 	</div><!--/container-->
