--- a/www/_includes/navbar.html
+++ b/www/_includes/navbar.html
@@ -6,13 +6,13 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/" title="">Hacker Logos</a>
+			<a class="navbar-brand" href="/" title="">{{ site.title }}</a>
 		</div>
 		<div class="navbar-collapse collapse navbar-right">
 			<ul class="nav navbar-nav">
 				<li><a href="/logos/index.html">Logos</a></li>
 				<li><a href="/support/contribute.html">Contribute</a></li>
-				<li><a href="/support/index.html">Support</a></li>
+				<li><a href="/support/index.html">FAQ</a></li>
 			</ul>
 		</div><!--/.navbar-collapse -->
 	</div>
