css hack for ugly active tabs

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -9,6 +9,9 @@
 		border: solid #ccc 1px;
 		margin: 10px;
 	}
+	.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+		outline: 0;
+	}
 	</style>
 	<link rel="shortcut icon" href="/favicon.ico">
 	<script>if (window.top.location != window.location) { window.top.location.href = document.location.href; }</script>
