better layout of icon links

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -12,6 +12,11 @@
 	.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
 		outline: 0;
 	}
+	.icon-link {
+	color: #888;
+	margin-top: 10px;
+	padding: 8px;
+	}
 	</style>
 	<link rel="shortcut icon" href="/favicon.ico">
 	<script>if (window.top.location != window.location) { window.top.location.href = document.location.href; }</script>
