seo for title on logo pages

--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>{{ site.title }} - {{ page.title }}{% if page.images.size > 0 %} Logos{% endif %}</title>
+	<title>{{ site.title }} - {{ page.title }}{% if page.images.size > 0 %} Vector Logos{% endif %}</title>
 	{% if page.url == '/index.html'%}{% include meta-home.html %}{% endif %}
 {% include meta.html %}
 </head>
