link to validate html

--- a/www/_includes/footer.html
+++ b/www/_includes/footer.html
@@ -1,1 +1,4 @@
-<p></p>
+<footer class="hidden-print">
+	<p class="small text-muted text-center">
+		<a href="http://validator.w3.org/check/referer">Validate HTML</a>
+</footer>
