more link to view _src images on github

--- a/www/_includes/imagelist.html
+++ b/www/_includes/imagelist.html
@@ -33,4 +33,7 @@
 {% endfor %}
 	</tbody>
 </table>
+{% if page.skipped %}
+<p><a href="https://github.com/fileformat/vectorlogozone/commits/gh-pages/www/logos/{{page.logohandle}}" style="btn btn-default">More...</a></p>
+{% endif %}
 </div></div>
