--- a/www/_includes/github.html
+++ b/www/_includes/github.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
+<link href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" property="stylesheet" rel="stylesheet" />
     <div class="github-fork-ribbon-wrapper right-bottom">
         <div class="github-fork-ribbon">
             <a href="https://github.com/fileformat/vectorlogozone">Fork me on GitHub</a>
