--- a/www/_includes/imagelist.html
+++ b/www/_includes/imagelist.html
@@ -27,6 +27,10 @@
 			{% if standard == false %}
 				{{imagetype}}
 			{% endif %}
+			{% capture extension %}{{image|split:'.'|last}}{% endcapture %}
+			{% if extension == 'png' %}
+				(Raster)
+			{% endif %}
 			</td>
 			<td><a href="/util/preview.html?image=/logos/{{page.logohandle}}/{{image}}" rel="nofollow"><img src="{{image}}" style="max-height:120px; max-width:50%;" /></a></td>
 		</tr>
