next/back support for flipping

--- a/www/_includes/meta-home.html
+++ b/www/_includes/meta-home.html
@@ -1,3 +1,4 @@
 <meta name="google-site-verification" content="ZrlyEMKE3kUBkn6005c6H7o20-XuHVN2eiPdZRU-k64" />
 <meta name="msvalidate.01" content="E90DBA4A9D3D37F1056E64E5604A7A0D" />
 <meta name="alexaVerifyID" content="KaTeke7OayJ23bqjvmj0fVbrwdo" />
+<link rel="prerender" href="/logos/index.html" />
