fix for more button in image list

--- a/www/_includes/imagelist.html
+++ b/www/_includes/imagelist.html
@@ -37,7 +37,7 @@
 {% endfor %}
 	</tbody>
 </table>
-{% if page.skipped %}
+{% if page.skipped > 0 %}
 <p><a href="https://github.com/fileformat/vectorlogozone/tree/gh-pages//www/logos/{{page.logohandle}}" style="btn btn-default">More...</a></p>
 {% endif %}
 </div></div>
