--- a/www/_includes/meta-home.html
+++ b/www/_includes/meta-home.html
@@ -2,3 +2,14 @@
 <meta name="msvalidate.01" content="E90DBA4A9D3D37F1056E64E5604A7A0D" />
 <meta name="alexaVerifyID" content="KaTeke7OayJ23bqjvmj0fVbrwdo" />
 <link rel="prerender" href="/logos/index.html" />
+<style type="text/css">
+/* pinterest widget */
+.pin-title { font-size:1em;text-decoration:none;color:#00a}
+.pin-description { color:#555; }
+.pin-tag { display:none; }
+
+/* override carousel bullets since images have white backgrounds */
+.carousel-indicators li { background-color:#ccc; }
+.carousel-indicators li.active { background-color:#white;border:1px solid #dedede; }
+
+</style>
