optional padding on visual inventory

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -12,6 +12,9 @@
 		margin: 10px;
 	}
 
+	/* optional padding on visual inventory */
+	.padded { padding: 5px; }
+
 	/* hide outline on a clicked tab */
 	.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
 		outline: 0;
