--- a/www/_includes/navbar.html
+++ b/www/_includes/navbar.html
@@ -12,6 +12,7 @@
 			<ul class="nav navbar-nav">
 				<li><a href="/logos/index.html">Logos</a></li>
 				<li><a href="/support/index.html">FAQ</a></li>
+				<li><a href="/search.html"><i class="fa fa-search"></i></a></li>
 			</ul>
 		</div><!--/.navbar-collapse -->
 	</div>
