experiments with manually responsive navbar

--- a/www/_includes/navbar.html
+++ b/www/_includes/navbar.html
@@ -6,7 +6,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/" title="">{{ site.title }}</a>
+			<a class="navbar-brand" href="/" title=""><span class="hidden-xs">{{ site.title }}</span><span class="visible-xs-inline" title="{{site.title}}">{{site.title_short}}</span></a>
 		</div>
 		<div class="navbar-collapse collapse navbar-right">
 			<ul class="nav navbar-nav">
