--- a/www/_includes/imagelist.html
+++ b/www/_includes/imagelist.html
@@ -18,9 +18,11 @@
 			<td style="white-space:nowrap;vertical-align:middle;">
 			{% capture imagetype %}{{image|split:'-'|last|split:'.'|first}}{% endcapture %}
 			{% assign standard = false %}
+			{% capture alt_text %}Alternate image for {{page.title}}{% endcapture %}
 			{% for standardtype in site.data.imagetype %}
 				{% if standardtype.id == imagetype %}
 					{{standardtype.title}}
+					{% capture alt_text %}Vector (.svg) logo for {{page.title}}: {{standardtype.title}}{% endcapture %}
 					{% assign standard = true %}
 				{% endif %}
 			{% endfor %}
@@ -32,7 +34,7 @@
 				(Raster)
 			{% endif %}
 			</td>
-			<td><a href="/util/preview.html?image=/logos/{{page.logohandle}}/{{image}}" rel="nofollow"><img src="{{image}}" style="max-height:120px; max-width:50%;" /></a></td>
+			<td><a href="/logos/{{page.logohandle}}/{{image}}" rel="nofollow"><img alt="{{alt_text}}" src="{{image}}" style="max-height:120px; max-width:50%;" /></a></td>
 		</tr>
 {% endfor %}
 	</tbody>
