--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -12,6 +12,7 @@
 			<div class="col-md-10 col-md-offset-1">
 				<div class="pull-right icon-link-header" style="padding-top:20px;">
 					{% if page.website %}<a title="Website" href="{{ page.website }}"><i class="fa fa-globe icon-link"></i></a>{% endif %}
+					{% if page.blog %}<a title="Blog" href="{{ page.blog }}"><i class="fa fa-rss-square icon-link"></i></a>{% endif %}
 					{% if page.facebook %}<a title="Facebook" href="{{ page.facebook }}"><i class="fa fa-facebook icon-link"></i></a>{% endif %}
 					{% if page.twitter %}<a title="Twitter" href="https://twitter.com/{{ page.twitter }}"><i class="fa fa-twitter icon-link"></i></a>{% endif %}
 					{% if page.github %}<a title="Github" href="https://github.com/{{ page.github }}"><i class="fa fa-github icon-link"></i></a>{% endif %}
