added theme color

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -3,7 +3,7 @@
 	<link href="/css/font-awesome.css" rel="stylesheet" type="text/css" />
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-	{% if page.images.size > 0 %}<meta property="og:image" content="{{ site.production_url }}/logos/{{ page.logohandle }}-ar21.svg" />{% endif %}
+	<meta name="theme-color" content="#2c3e50" />
 	<style type="text/css">
 
 	/* faded border around logos in lists */
