added pinterest support

--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -16,6 +16,7 @@
 					{% if page.facebook %}<a title="Facebook" href="{{ page.facebook }}"><i class="fa fa-facebook icon-link"></i></a>{% endif %}
 					{% if page.twitter %}<a title="Twitter" href="https://twitter.com/{{ page.twitter }}"><i class="fa fa-twitter icon-link"></i></a>{% endif %}
 					{% if page.github %}<a title="Github" href="https://github.com/{{ page.github }}"><i class="fa fa-github icon-link"></i></a>{% endif %}
+                    {% if page.pinterest %}<a title="Pinterest" href="https://www.pinterest.com/{{ page.pinterest }}/"><i class="fa fa-pinterest icon-link"></i></a>{% endif %}
 					{% if page.wikipedia %}<a title="Wikipedia" href="{{ page.wikipedia }}"><i class="fa fa-wikipedia-w icon-link"></i></a>{% endif %}
 					{% if prev_page %}<a class="btn btn-default btn-xs" href="{{prev_page}}" title="Previous set of logos"><i class="fa fa-caret-left"></i> Previous</a>{% endif %}
 					{% if next_page %}<a class="btn btn-default btn-xs" href="{{next_page}}" title="Next set of logos">Next <i class="fa fa-caret-right"></i></a>{% endif %}
