--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -51,7 +51,7 @@
 {% include nextprev.html %}
 	{% if prev_page %}<link rel="prev" href="{{prev_page}}" />{% endif %}
 	{% if next_page %}<link rel="next" href="{{next_page}}" />{% endif %}
-	{% if page.url == '/index.html'%}{% include meta-home.html %}{% endif %}
+	{% if page.url == '/index.html' or page.url == '/' %}{% include meta-home.html %}{% endif %}
 	{% if page.images.size > 0 %}
 
 	<meta property="description" content="Vector logos for {{page.title}} in uniform sizes and layouts in the standard .SVG file format">
