--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -60,6 +60,7 @@
 	<meta property="og:title" content="{{page.title}} Vector (SVG) Logos">
 	<meta property="og:description" content="Vector logos for {{page.title}} in uniform sizes and layouts in the standard .SVG file format">
 	<meta property="og:image" content="{{site.production_url}}/logos/{{page.logohandle}}/{{page.logohandle}}-card.png">
+    <meta property="og:site_name" content="VectorLogoZone">
 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="{{page.title}} Vector (SVG) Logos">
