support for new tile-sized logos

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -15,6 +15,7 @@
 
 	/* optional padding on visual inventory */
 	.padded { padding: 5px; }
+    .maxsize { max-width: 120px; max-height: 120px; }
 
 	/* hide outline on a clicked tab */
 	.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
@@ -28,8 +29,14 @@
 	padding: 8px;
 	}
 
+    /* shareing buttons on logo pages */
+    .sharelogo {
+        width: 24px;
+        height: 24px;
+    }
+
 	/* seems like a Bootstrap bug (or incompatibility with FontAwesome) */
-	.carousel-control { padding-top: 25%; } 
+	.carousel-control { padding-top: 25%; }
 
 	/* bootswatch ugliness */
 	.alert-info a { color: white; text-decoration: underline; }
