--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -11,6 +11,7 @@
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
 				<div class="pull-right icon-link-header" style="padding-top:20px;">
+                    {% if page.guide %}<a title="Official Guidelines" href="{{ page.guide }}"><i class="fa fa-certificate icon-link"></i></a>{% endif %}
 					{% if page.website %}<a title="Website" href="{{ page.website }}"><i class="fa fa-globe icon-link"></i></a>{% endif %}
 					{% if page.blog %}<a title="Blog" href="{{ page.blog }}"><i class="fa fa-rss-square icon-link"></i></a>{% endif %}
 					{% if page.facebook %}<a title="Facebook" href="{{ page.facebook }}"><i class="fa fa-facebook icon-link"></i></a>{% endif %}
