--- a/www/_includes/share.html
+++ b/www/_includes/share.html
@@ -1,5 +1,6 @@
 <p>Share: {% for target in site.sharing_targets %}
     <a href="https://simpleshare.io/go?site={{target}}&amp;url={{ site.production_url | cgi_escape }}{{ page.url | cgi_escape }}&amp;text={{ page.title | cgi_escape }}+Logo"
+       rel="nofollow"
     ><img class="sharelogo" src="/logos/{{target}}/{{target}}-tile.svg" /></a>
 {% endfor %}
 </p>
