--- a/www/_includes/google-analytics.html
+++ b/www/_includes/google-analytics.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-328425-25']);
+  _gaq.push(['_setAccount', '{{site.google_analytics_id}}']);
   _gaq.push(['_trackPageview']);
 
   (function() {
