--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -35,6 +35,11 @@
         height: 24px;
     }
 
+    /* search buttons */
+    .searchlogo {
+        height: 24px;
+    }
+
 	/* seems like a Bootstrap bug (or incompatibility with FontAwesome) */
 	.carousel-control { padding-top: 25%; }
 
