--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -26,7 +26,15 @@
 				{{ content }}
 			</div><!--/col-->
 		</div><!--/row-->
-		{% if page.images.size > 0 %}{% include imagelist.html %}
+		{% if page.images.size > 0 %}{% include imagelist.html %}{% endif %}
+        {% if page.logohandle %}
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                {% include logosearch.html %}
+            </div>
+        </div>
+        {% endif %}
+        {% if page.images.size > 0 %}
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
 				{% include share.html %}
