Structured Data (rich card) for Google

--- a/www/_includes/meta-home.html
+++ b/www/_includes/meta-home.html
@@ -9,3 +9,21 @@
 .pin-description { color:#555; }
 .pin-tag { display:none; }
 </style>
+<script type="application/ld+json">
+{
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "url": "https://www.vectorlogo.zone",
+    "name": "Vector Logo Zone",
+    "logo": "https://www.vectorlogo.zone/favicon.svg",
+    "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://www.vectorlogo.zone/search.html?q={query}",
+        "query-input": "required name=query"
+    },
+    "sameAs": [
+        "https://www.facebook.com/VectorLogoZone/",
+        "https://twitter.com/VectorLogoZone/"
+    ]
+}
+</script>
