more touch-friendly search & share icon buttons

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -31,13 +31,14 @@
 
     /* shareing buttons on logo pages */
     .sharelogo {
-        width: 24px;
-        height: 24px;
+        margin: 4px;
+        width: 32px;
     }
 
     /* search buttons */
     .searchlogo {
-        height: 24px;
+        margin: 4px;
+        width: 32px;
     }
 
 	/* seems like a Bootstrap bug (or incompatibility with FontAwesome) */
